# graphcol-exam

./: CMakeLists.txt  README.md  graph.py
algorithm/: CMakeLists.txt  demo.cpp
algorithm/ReMAC20/: graph_color.cpp
algorithm/sciengi/: CMakeLists.txt  demo.cpp
algorithm/sciengi/src/: CMakeLists.txt  main.cpp
algorithm/sciengi/src/coloring/: edge.cpp  edge.h  edge_tesing.h
algorithm/sciengi/src/logger/: logger.cpp  logger.h
algorithm/sciengi/src/matrix/: matrix.cpp  matrix.h
algorithm/sciengi/src/report/: reporter.cpp  reporter.h
algorithm/sciengi/src/utils/: general.cpp  general.h
algorithm/sciengi/test/: CMakeLists.txt  test_algorithm.cpp  test_utils.cpp
algorithm/src/: CMakeLists.txt
algorithm/src/logger/: logger.cpp
algorithm/src/utils/: general.cpp
algorithm/test/: test_algorithm.cpp
examples/: report_C3.json  report_K4.json  report_P3.json  report_Petersen.json
visualizer/: instruction.md  visualizer.html
